# kmesh

./: .clang-format  .codecov.yml  .codespellrc  .gitignore  .markdownlint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRUBTING.md  MAINTAINERS.md  Makefile  OWNERS  README-zh.md  README.en.md  README.md  ROADMAP.md  SECURITY.md  build.sh  circuit_breaker_test.md  copy.sh  diff  go.mod  go.sum  kmesh.dockerfile  kmesh.patch  kmesh.spec  kmesh_bpf_env.sh  kmesh_compile.sh  kmesh_compile_env_pre.sh  kmesh_macros_env.sh  kmesh_macros_env_kernel.sh  pr_body.txt  start_kmesh.sh  test_data_and_shell.md
.gemini/: config.yaml
.githooks/: pre-commit
.github/: dependabot.yml  (+1 more)
bpf/: CMakeLists.txt  COPYING  LICENSE.BSD-2-Clause  LICENSE.GPL-2.0  Makefile  bpf.print.mk  bpf.vars.mk
bpf/bpf2go/: bpf2go.go  cgroupsock_bpfeb.go  cgroupsock_bpfel.go  cluster_bpfeb.go  cluster_bpfel.go  filter_bpfeb.go  filter_bpfel.go
bpf/deserialization_to_bpf_map/: Makefile  deserialization_to_bpf_map.c  deserialization_to_bpf_map.h
bpf/include/: bpf_common.h  bpf_helper_defs_ext.h  bpf_kfunc.h  bpf_log.h  cluster.h  cluster_type.h  common.h  config.h  deserialization_to_bpf_map.h  endpoint.h  endpoint_type.h  errno.h  filter.h  filter_type.h  inner_map_defs.h  listener.h  listener_type.h  map_config.h  route.h  route_type.h  router.h  tail_call.h
bpf/kmesh/: Makefile  README.md  bpf_sock.c  cgroup_sock.c  cluster.c  config.h  endpoint.h  filter.c  filter.h  listener.h  route.h  route_config.c  sendmsg.c  skb_verdict.c  sockops.c  sockops_workload.c  tail_call.h  tracepoint.c  xdp.c
bpf/kmesh/ads/: cgroup_sock.c  sockops.c  tracepoint.c
bpf/kmesh/ads/include/: circuit_breaker.h  cluster.h  config.h  filter.h  kmesh_common.h  listener.h  local_ratelimit.h  route_config.h  tail_call.h  tail_call_index.h  tcp_proxy.h
bpf/kmesh/ads/include/ctx/: sock_addr.h  sock_ops.h
bpf/kmesh/bpf2go/: bpf2go.go  kmeshcgroupsock_bpfeb.go  kmeshcgroupsock_bpfel.go  kmeshcgroupsockworkload_bpfeb.go  kmeshcgroupsockworkload_bpfel.go  kmeshcluster_bpfeb.go  kmeshcluster_bpfel.go  kmeshfilter_bpfeb.go  kmeshfilter_bpfel.go  kmeshrouteconfig_bpfeb.go  kmeshrouteconfig_bpfel.go  kmeshsockops_bpfeb.go  kmeshsockops_bpfel.go
bpf/kmesh/bpf2go/dualengine/: kmeshcgroupskb_bpfeb.go  kmeshcgroupskb_bpfel.go  kmeshcgroupskbcompat_bpfeb.go  kmeshcgroupskbcompat_bpfel.go  kmeshcgroupsockworkload_bpfeb.go  kmeshcgroupsockworkload_bpfel.go  kmeshcgroupsockworkloadcompat_bpfeb.go  kmeshcgroupsockworkloadcompat_bpfel.go  kmeshrecvmsg_bpfeb.go  kmeshrecvmsg_bpfel.go  kmeshrecvmsgcompat_bpfeb.go  kmeshrecvmsgcompat_bpfel.go  kmeshsendmsg_bpfeb.go  kmeshsendmsg_bpfel.go  kmeshsendmsgcompat_bpfeb.go  kmeshsendmsgcompat_bpfel.go  kmeshsockopsworkload_bpfeb.go  kmeshsockopsworkload_bpfel.go  kmeshsockopsworkloadcompat_bpfeb.go  kmeshsockopsworkloadcompat_bpfel.go  kmeshtcworkload_bpfeb.go  kmeshtcworkload_bpfel.go  kmeshtcworkloadcompat_bpfeb.go  kmeshtcworkloadcompat_bpfel.go  kmeshxdpauth_bpfeb.go  kmeshxdpauth_bpfel.go  kmeshxdpauthcompat_bpfeb.go  kmeshxdpauthcompat_bpfel.go
bpf/kmesh/bpf2go/general/: kmeshtcmarkdecrypt_bpfeb.go  kmeshtcmarkdecrypt_bpfel.go  kmeshtcmarkdecryptcompat_bpfeb.go  kmeshtcmarkdecryptcompat_bpfel.go  kmeshtcmarkencrypt_bpfeb.go  kmeshtcmarkencrypt_bpfel.go  kmeshtcmarkencryptcompat_bpfeb.go  kmeshtcmarkencryptcompat_bpfel.go
bpf/kmesh/bpf2go/kernelnative/: kmeshcgroupsock_bpfeb.go  kmeshcgroupsock_bpfel.go  kmeshcgroupsockcompat_bpfeb.go  kmeshcgroupsockcompat_bpfel.go  kmeshsockops_bpfeb.go  kmeshsockops_bpfel.go  kmeshsockopscompat_bpfeb.go  kmeshsockopscompat_bpfel.go
bpf/kmesh/bpf2go/kernelnative/enhanced/: kmeshcgroupsock_bpfeb.go  kmeshcgroupsock_bpfel.go  kmeshcgroupsockcompat_bpfeb.go  kmeshcgroupsockcompat_bpfel.go  kmeshsockops_bpfeb.go  kmeshsockops_bpfel.go  kmeshsockopscompat_bpfeb.go  kmeshsockopscompat_bpfel.go  kmeshtracepoint_bpfeb.go  kmeshtracepoint_bpfel.go  kmeshtracepointcompat_bpfeb.go  kmeshtracepointcompat_bpfel.go
bpf/kmesh/bpf2go/kernelnative/normal/: kmeshcgroupsock_bpfeb.go  kmeshcgroupsock_bpfel.go  kmeshcgroupsockcompat_bpfeb.go  kmeshcgroupsockcompat_bpfel.go  kmeshsockops_bpfeb.go  kmeshsockops_bpfel.go  kmeshsockopscompat_bpfeb.go  kmeshsockopscompat_bpfel.go  kmeshtracepoint_bpfeb.go  kmeshtracepoint_bpfel.go
bpf/kmesh/general/: tc_mark_decrypt.c  tc_mark_encrypt.c
bpf/kmesh/general/include/: ipsec_map.h  tc.h
bpf/kmesh/include/: cluster.h  config.h  filter.h  kmesh_common.h  listener.h  route_config.h  sendmsg.h  tail_call.h  tcp_proxy.h
bpf/kmesh/include/ctx/: sock_addr.h  sock_ops.h  tuple.h
bpf/kmesh/probes/: access_log.h  metrics.h  performance_probe.h  probe.h  tcp_long_conn_probe.h  tcp_probe.h
bpf/kmesh/workload/: cgroup_skb.c  cgroup_sock.c  conn_report_timer.c  long_conn_timer.c  perf_event.c  recvmsg.c  sendmsg.c  sockops.c  sockops_tuple.c  tc.c  tc_mark_decrypt.c  tc_mark_encrypt.c  xdp.c
bpf/kmesh/workload/include/: authz.h  backend.h  config.h  encoder.h  endpoint.h  frontend.h  ipsec_map.h  service.h  tail_call.h  workload.h  workload_common.h  xdp.h
bpf/kmesh/workload/include/ctx/: sock_addr.h
bpf/slb/: Makefile  README.md  cgroup_sock.c  cluster.c  cluster.h  config.h  endpoint.h  filter.c  filter.h  listener.h  route.h  tail_call.h  tc_rev_nat.h  tc_xdp_revnat.c  tuple.h  xdp.h  xdp_load_balance.c
bpf/slb/bpf2go/: bpf2go.go  cgroupsock_bpfeb.go  cgroupsock_bpfel.go  tcxdprevnat_bpfeb.go  tcxdprevnat_bpfel.go  xdpbalance_bpfeb.go  xdpbalance_bpfel.go  xdpcluster_bpfeb.go  xdpcluster_bpfel.go
bpf/sockmap/: Makefile  README.md  bpf_redirect.c  bpf_sockmap.h  bpf_sockops.c  sockmap.bpf.h
bpf/test/workload/: Makefile  cgroup_sock_test.c  common.h  sendmsg_test.c  sockops_test.c  xdp_test.c
oncn-mda/: CMakeLists.txt  README.md
oncn-mda/cli_src/: CMakeLists.txt  mdacore.c
oncn-mda/cli_src/func/: chain.c  global.c  log.c  query.c  switch.c
oncn-mda/docs/: design.md
oncn-mda/ebpf_src/: CMakeLists.txt  sock_ops.c  sock_redirect.c
oncn-mda/etc/: oncn-mda.conf
oncn-mda/include/: data.h  log.h  macli.h  mesh_accelerate.h
(+1338 files in other folders)
